# cs636-raytracer

./: .gitignore  README.md  cs636-raytracer.cabal
a1/: Color.hs  Image.hs  Makefile  MatInv.hs  Math.hs  MathDirect.hs  MathHmatrix.hs  Primitive.hs  Ray.hs  RayTracer.hs  Scene.hs  minv.mw  scene0.hs  teapot.hs
a2/: Color.hs  Makefile  MatInv.hs  Math.hs  Mesh.hs  Primitive.hs  README  Ray.hs  RayTracer.hs  Scene.hs  scene0.hs  scene1.hs  teapot.hs
a3/: Bounding.hs  Image.hs  Makefile  Math.hs  Mesh.hs  Object.hs  Primitive.hs  README  Ray.hs  RayTracer.hs  Scene.hs  data.py  graph.py  scene0.csv  scene0.hs  scene1.csv
a4/: Color.hs  Material.hs  Math.hs  README  RayTracer.hs  Scene.hs  scene0.hs  scene1.hs
a5/: Color.hs  Makefile  Material.hs  Math.hs  Mesh.hs  Primitive.hs  RayTracer.hs  Scene.hs  scene0.hs  scene1.hs
a6/: Bounding.hs  Image.hs  Makefile  Material.hs  Math.hs  Mesh.hs  Primitive.hs  README  Ray.hs  RayTracer.hs  scene0.hs
models/: README.md  octahedron.smf
